--- a/scss/nav.scss
+++ b/scss/nav.scss
@@ -40,6 +40,12 @@
 @media screen and (max-width: 1024px) {
   .nav {
 
+    .links {
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
+
     a {
       color: $white;
 
