--- a/css/app.css
+++ b/css/app.css
@@ -641,8 +641,8 @@ label > .label-body {
 @media screen and (max-width: 1024px) {
   .nav .links {
     position: absolute;
-    top: 0;
-    right: 0; }
+    right: 0;
+    width: 500px; }
   .nav a {
     color: #fff; }
     .nav a:hover {
