ADDED IN THE BALL... THE BALL

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -8,6 +8,7 @@
 @import 'panel-ctas';
 @import 'animation';
 @import 'divider';
+@import 'loading';
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
