--- a/css/app.css
+++ b/css/app.css
@@ -1,13 +1,17 @@
 @charset "UTF-8";
 /* Color Palette */
 /* ------------------------------ */
-.hero-image {
-  position: absolute;
-  z-index: -3;
+.slider-image {
   width: 100%;
-  height: 45%;
-  opacity: .7;
-  bottom: 0; }
+  height: 100%; }
+  .slider-image .hero-image {
+    position: absolute;
+    z-index: -3;
+    width: 100%;
+    height: 45%;
+    opacity: .7;
+    bottom: 0;
+    z-index: 3; }
 
 .hero {
   height: 100vh;
@@ -822,6 +826,57 @@ label > .label-body {
   align-items: center;
   justify-content: center; }
 
+.loader {
+  position: absolute;
+  width: 100%;
+  z-index: 1;
+  padding-top: 17%; }
+  .loader img {
+    margin-top: 15px;
+    margin-left: 10px;
+    opacity: 1; }
+  .loader .ball {
+    width: 50px;
+    height: 50px;
+    background-color: #03A9F4;
+    border-radius: 50%;
+    margin: 200px auto 0;
+    animation: ball 300ms cubic-bezier(0.165, 0.84, 0.44, 1) infinite alternate;
+    animation-delay: 0;
+    margin: auto; }
+  .loader .shadow {
+    width: 50px;
+    height: 20px;
+    border-radius: 50%;
+    background-color: #03A9F4;
+    display: block;
+    margin: 0 auto;
+    position: relative;
+    top: -10px;
+    opacity: 0.7;
+    animation: shadow 300ms cubic-bezier(0.165, 0.84, 0.44, 1) infinite alternate;
+    animation-delay: 0; }
+@keyframes ball {
+  0% {
+    transform: translateY(0px); }
+  100% {
+    transform: translateY(-150px); } }
+@keyframes shadow {
+  0% {
+    transform: scale(0.5); }
+  100% {
+    transform: scale(1.1);
+    opacity: .1; } }
+.loader-overlay {
+  position: absolute;
+  background: #fff;
+  width: 100%;
+  height: 100%;
+  z-index: 2; }
+
+@media screen and (max-width: 550px) {
+  .loader {
+    padding-top: 45%; } }
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 /* NOTE
