--- a/scss/hero.scss
+++ b/scss/hero.scss
@@ -1,10 +1,16 @@
-.hero-image {
-	position: absolute;
-	z-index: -3;
+.slider-image {
 	width: 100%;
-	height: 45%;
-	opacity: .7;
-	bottom: 0;
+	height: 100%;
+	
+	.hero-image {
+		position: absolute;
+		z-index: -3;
+		width: 100%;
+		height: 45%;
+		opacity: .7;
+		bottom: 0;
+		z-index: 3;
+	}
 }
 
 .hero {
