--- a/scss/app.scss
+++ b/scss/app.scss
@@ -9,6 +9,7 @@
 @import 'animation';
 @import 'divider';
 @import 'loading';
+@import 'modal';
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
