--- a/css/app.css
+++ b/css/app.css
@@ -18,8 +18,7 @@
   color: #fff; }
   .hero .left {
     padding-right: 100px;
-    background: #fff;
-    border: 2px solid #03A9F4;
+    background: #03A9F4;
     height: 100%;
     padding-left: 6rem;
     z-index: 3;
