--- a/scss/app.scss
+++ b/scss/app.scss
@@ -10,6 +10,7 @@
 @import 'divider';
 @import 'loading';
 @import 'modal';
+@import 'sprite';
 
 /* Base Styles
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
