--- a/css/app.css
+++ b/css/app.css
@@ -1055,6 +1055,9 @@ are based on 10px sizing. So basically 1.5rem = 15px :) */
   padding: 0;
   margin: 0; }
 
+:focus {
+  outline: 0; }
+
 html {
   font-size: 62.5%; }
 
