--- a/javaScriptDrumKit/style.css
+++ b/javaScriptDrumKit/style.css
@@ -1,17 +1,20 @@
 html {
   font-size: 10px;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#5cc393+0,00c167+100 */
-  background: #5cc393; /* Old browsers */
-  background: -moz-linear-gradient(top,  #5cc393 0%, #00c167 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(top,  #5cc393 0%,#00c167 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to bottom,  #5cc393 0%,#00c167 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5cc393', endColorstr='#00c167',GradientType=0 ); /* IE6-9 */
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,f4f4f4+100 */
+background: #ffffff; /* Old browsers */
+background: -moz-linear-gradient(top,  #ffffff 0%, #f4f4f4 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #ffffff 0%,#f4f4f4 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #ffffff 0%,#f4f4f4 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f4f4f4',GradientType=0 ); /* IE6-9 */
+
+
 
 }
 body,html {
   margin: 0;
   padding: 0;
   font-family: 'Lato', sans-serif;
+  height: 100%;
 }
 
 .content {
@@ -19,7 +22,7 @@ body,html {
   max-width: 500px;
   margin: 0 auto;
   text-align: center;
-  border: 24px solid rgba(0,0,0,.02);
+  border: 10px solid #6fd8a3;
   -webkit-box-shadow: -1px 18px 35px -10px rgba(0,0,0,0.02);
   -moz-box-shadow: -1px 18px 35px -10px rgba(0,0,0,0.02);
   box-shadow: -1px 18px 35px -10px rgba(0,0,0,0.02);
@@ -80,6 +83,7 @@ body,html {
   border: 1px solid rgba(255,255,255,.2);
   margin-top: 10rem;
   padding: 1.8rem 1.8rem;
+  background: #5cc393;
 }
 
 .key {
